# test

./: .pre-commit-config.yaml
.github/workflows/: deploy.yaml  main.yaml
docs/: mkdocs.yml  pyproject.toml
docs/docs/: index.md
infra-pulumi/: Justfile  Pulumi.yaml  pyproject.toml
infra-pulumi/src/: __main__.py  package_lambda.py
service/: Justfile  pyproject.toml
service/service/: main.py
