[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Che OG <cheog@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
