[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Che OG <cheog@protonmail.com>"]
readme = "README.md"
packages = [{include = "service"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
